--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -148,6 +148,9 @@ application:
       - 'https://raw.githubusercontent.com/afwfv/DD-AD/main/rule/DD-AD.txt' #name: DD-AD
       - 'https://raw.githubusercontent.com/xndeye/adblock_list/main/rule/private.txt' #name: xndeye
       - 'https://raw.githubusercontent.com/Noyllopa/NoAppDownload/master/NoAppDownload.txt' #name: NoAppDownload
+      - 'https://raw.githubusercontent.com/8680/GOODBYEADS/master/data/rules/adblock.txt' #name: GOODBYEADS
+      - 'https://raw.githubusercontent.com/d3ward/toolz/master/src/d3host.adblock' #name: d3ward规则
+      - 'https://github.com/Potterli20/file/releases/download/ad-youtube-hosts/ad-youtube-adblock.txt' #name: 冷莫去Youtube广告
     #本地规则
     local: #本地规则请将文件移动到项目路径rule目录中
       - 'mylist.txt'
