--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -159,7 +159,7 @@ application:
       - 'https://raw.githubusercontent.com/DivineEngine/AdGuardFilter/master/filter.txt' #name: Connershua
       #- 'https://github.com/Potterli20/file/releases/download/ad-hosts-pro/ad-adguardhome.txt' #name: 冷莫
       #- 'https://github.com/Potterli20/file/releases/download/ad-hosts-pro/ad-adguardhome-dnstype.txt' #name: 冷莫-dnstype
-      - 'https://github.com/Potterli20/file/releases/download/ad-hosts-lite/ad-adguardhome.txt' #name: 冷莫-lite
+      #- 'https://github.com/Potterli20/file/releases/download/ad-hosts-lite/ad-adguardhome.txt' #name: 冷莫-lite
       - 'https://github.com/Potterli20/file/releases/download/ad-hosts-lite/ad-adguardhome-dnstype.txt' #name: 冷莫-lite-dnstype
       - 'https://raw.githubusercontent.com/DoingDog/XXKiller/main/w.txt' #name: XXKiller basic
       - 'https://raw.githubusercontent.com/DoingDog/XXKiller/main/f.txt' #name: XXKiller premium
