--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -112,7 +112,7 @@ application:
       #- 'https://nsfw.oisd.nl/' #name: nsfw
       #- 'https://adguardteam.github.io/HostlistsRegistry/assets/filter_37.txt' #name: noGoogle会屏蔽Google系产品
       - 'https://raw.gitmirror.com/lingeringsound/10007/main/adb.txt' #name: lingeringsound
-      - 'https://file-git.trli.club/Domains/AccelerateHosts/github-hosts.txt' #name: AccelerateHosts
+      #- 'https://file-git.trli.club/Domains/AccelerateHosts/github-hosts.txt' #name: AccelerateHosts
       - 'https://raw.hellogithub.com/hosts' #name: hellogithub
       - 'https://raw.githubusercontent.com/samyansan/AdRules-SamYan/master/ad.txt' #name: samyansan
       - 'https://malware-filter.gitlab.io/phishing-filter/phishing-filter-agh.txt' #name: phishing-filter
@@ -123,7 +123,7 @@ application:
       - 'https://raw.githubusercontent.com/badmojr/1Hosts/master/Lite/adblock.txt' #name: 1Hosts (Lite)
       - 'https://hblock.molinero.dev/hosts_adblock.txt' #name: Hblock
       - 'https://raw.githubusercontent.com/neodevpro/neodevhost/master/lite_adblocker' #name: NEO DEV HOST
-      - 'https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV-AGH.txt' #name: SmartTV Blocklist
+      #- 'https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV-AGH.txt' #name: SmartTV Blocklist
       - 'https://easylist-downloads.adblockplus.org/fanboy-annoyance.txt' #name: Fanboy’s Annoyances List
       - 'https://www.malwaredomainlist.com/hostslist/hosts.txt' #name: Malware Domain List
       - 'https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts' #name: StevenBlack
@@ -134,12 +134,12 @@ application:
       - 'https://raw.githubusercontent.com/cjx82630/cjxlist/master/cjxlist.txt' #name: CJX's EasyList Lite
       - 'https://raw.githubusercontent.com/Cats-Team/AdRules/main/adblock.txt' #name: 杏稍AdRules AdBlock List
       - 'https://raw.githubusercontent.com/Cats-Team/AdRules/main/adblock_lite.txt' #name: 杏稍AdRules AdBlock List Lite
-      - 'https://raw.githubusercontent.com/Cats-Team/AdRules/main/adblock_plus.txt' #name: 杏稍AdRules AdBlock List Plus
+      #- 'https://raw.githubusercontent.com/Cats-Team/AdRules/main/adblock_plus.txt' #name: 杏稍AdRules AdBlock List Plus
       - 'https://raw.githubusercontent.com/reek/anti-adblock-killer/blob/master/anti-adblock-killer-filters.txt' #name: anti-adblock-killer-filters
       - 'https://raw.githubusercontent.com/o0HalfLife0o/list/master/ad-pc.txt' #name: ABP/ublock订阅规则ad-pc
       - 'https://raw.githubusercontent.com/o0HalfLife0o/list/master/ad.txt' #name: ABP/ublock订阅规则ad
       - 'https://raw.githubusercontent.com/o0HalfLife0o/list/master/ad-edentw.txt' #name: ABP/ublock订阅规则edentw
-      - 'https://raw.githubusercontent.com/Maasea/sgmodule/master/YouTube.Enhance.sgmodule' #name: 去油管广告
+      #- 'https://raw.githubusercontent.com/Maasea/sgmodule/master/YouTube.Enhance.sgmodule' #name: 去油管广告
       - 'https://raw.githubusercontent.com/Maasea/sgmodule/master/Bilibili.Helper.sgmodule' #name: 去bilibili广告
       - 'https://raw.githubusercontent.com/Maasea/sgmodule/master/KeepAds.sgmodule' #name: 去keep广告
       - 'https://raw.githubusercontent.com/uniartisan/adblock_list/master/adblock_lite.txt' #name: adblock_list
